Add #672: RestAPI support for new EAS Server
